@@ -33,7 +33,7 @@ public abstract class PolyLine {
     public abstract boolean isClosed();
 
     public List<Point> points() {
-        return Collections.unmodifiableList(new ArrayList<>(points));
+        return List.copyOf(points);
     }
 
     public Point firstPoint() {
